--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   primeiro-job:
     name: "Meu Primeiro Job"
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: "Minha primeira ação"
         run: echo "Hello world !!!"
