--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,8 @@ jobs:
         run: |
           echo "Você criou o seu primeiro workflow"
           echo "Parabéns !!!"
+      - name: "Script python"
+        run: |
+          variavel = "Hello world"
+          print(variavel)
+        shell: python
